[gd_scene load_steps=4 format=3 uid="uid://b2vkn8xgb3ycw"]

[ext_resource type="Script" path="res://scripts/ui/CardDetailPopup.gd" id="1_j4m8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.9, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="CardDetailPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_j4m8r")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PopupPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -280.0
offset_right = 200.0
offset_bottom = 280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="CloseButton" type="Button" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "√ó"

[node name="Content" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="CardImage" type="TextureRect" parent="PopupPanel/Content"]
clip_contents = true
layout_mode = 2
custom_minimum_size = Vector2(180, 240)
size_flags_vertical = 0
stretch_mode = 5
expand_mode = 1

[node name="Info" type="VBoxContainer" parent="PopupPanel/Content"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="CardName" type="Label" parent="PopupPanel/Content/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Âç°ÁâåÂêçÁß∞"
horizontal_alignment = 1

[node name="Description" type="Label" parent="PopupPanel/Content/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Âç°ÁâåÊèèËø∞"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Stats" type="HBoxContainer" parent="PopupPanel/Content"]
layout_mode = 2
size_flags_vertical = 0

[node name="AttackStat" type="VBoxContainer" parent="PopupPanel/Content/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AttackLabel" type="Label" parent="PopupPanel/Content/Stats/AttackStat"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "‚öîÔ∏è ÊîªÂáªÂäõ"
horizontal_alignment = 1

[node name="AttackValue" type="Label" parent="PopupPanel/Content/Stats/AttackStat"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="HealthStat" type="VBoxContainer" parent="PopupPanel/Content/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel" type="Label" parent="PopupPanel/Content/Stats/HealthStat"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "‚ù§Ô∏è ÁîüÂëΩÂÄº"
horizontal_alignment = 1

[node name="HealthValue" type="Label" parent="PopupPanel/Content/Stats/HealthStat"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="ArmorStat" type="VBoxContainer" parent="PopupPanel/Content/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArmorLabel" type="Label" parent="PopupPanel/Content/Stats/ArmorStat"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 1, 1)
theme_override_font_sizes/font_size = 14
text = "üõ°Ô∏è Êä§Áî≤"
horizontal_alignment = 1

[node name="ArmorValue" type="Label" parent="PopupPanel/Content/Stats/ArmorStat"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="SkillInfo" type="VBoxContainer" parent="PopupPanel/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SkillName" type="Label" parent="PopupPanel/Content/SkillInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "üí´ ÊäÄËÉΩÂêçÁß∞"
horizontal_alignment = 1

[node name="SkillEffect" type="Label" parent="PopupPanel/Content/SkillInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "ÊäÄËÉΩÊïàÊûúÊèèËø∞"
horizontal_alignment = 1
autowrap_mode = 2